Bug 1428104 - Renaming IMAP folders that have subfolders may fail. r=jorgk,GeneSmith, f=frg